--- a/optimization_analysis.ipynb
+++ b/optimization_analysis.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,149 +170,194 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Expiry Time</th>\n",
-       "      <th>Risk-Free Rate</th>\n",
-       "      <th>Volatility</th>\n",
-       "      <th>Strike Price</th>\n",
-       "      <th>Original Method Price</th>\n",
-       "      <th>Optimized Method Price</th>\n",
-       "      <th>Basis</th>\n",
-       "      <th>Call Flag</th>\n",
-       "      <th>Empirical Price</th>\n",
-       "      <th>Original Error</th>\n",
-       "      <th>Optimized Error</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>102</td>\n",
-       "      <td>3.70643</td>\n",
-       "      <td>4.02810</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3.997243</td>\n",
-       "      <td>0.072753</td>\n",
-       "      <td>0.007720</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>102</td>\n",
-       "      <td>3.70643</td>\n",
-       "      <td>4.10252</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3.997243</td>\n",
-       "      <td>0.072753</td>\n",
-       "      <td>0.026337</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>102</td>\n",
-       "      <td>3.70643</td>\n",
-       "      <td>4.03161</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3.997243</td>\n",
-       "      <td>0.072753</td>\n",
-       "      <td>0.008598</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>105</td>\n",
-       "      <td>2.53435</td>\n",
-       "      <td>2.74178</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2.751949</td>\n",
-       "      <td>0.079071</td>\n",
-       "      <td>0.003695</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>105</td>\n",
-       "      <td>2.53435</td>\n",
-       "      <td>2.68088</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2.751949</td>\n",
-       "      <td>0.079071</td>\n",
-       "      <td>0.025825</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Expiry Time  Risk-Free Rate  Volatility  Strike Price  \\\n",
-       "0            1            0.02         0.1           102   \n",
-       "1            1            0.02         0.1           102   \n",
-       "2            1            0.02         0.1           102   \n",
-       "3            1            0.02         0.1           105   \n",
-       "4            1            0.02         0.1           105   \n",
-       "\n",
-       "   Original Method Price  Optimized Method Price  Basis  Call Flag  \\\n",
-       "0                3.70643                 4.02810      0          1   \n",
-       "1                3.70643                 4.10252      2          1   \n",
-       "2                3.70643                 4.03161      1          1   \n",
-       "3                2.53435                 2.74178      0          1   \n",
-       "4                2.53435                 2.68088      1          1   \n",
-       "\n",
-       "   Empirical Price  Original Error  Optimized Error  \n",
-       "0         3.997243        0.072753         0.007720  \n",
-       "1         3.997243        0.072753         0.026337  \n",
-       "2         3.997243        0.072753         0.008598  \n",
-       "3         2.751949        0.079071         0.003695  \n",
-       "4         2.751949        0.079071         0.025825  "
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "option_prices.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2: Plots"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.1: Error Between Bases"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 2.1.1: Calls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 2.1.2: Puts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.2: Error vs Risk-Free Rates"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 2.2.1: Calls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 2.2.1: Puts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.3: Error vs Volatility"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 2.3.1: Calls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 2.3.1: Puts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.4: Error vs Strike Price"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 2.4.1: Calls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 2.4.1: Puts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.5: Error vs Expiry Time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 2.5.1: Calls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 2.5.1: Puts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
