Added matplotlib package. See previous commit for Next conditions.

--- a/optimization_analysis.ipynb
+++ b/optimization_analysis.ipynb
@@ -40,6 +40,7 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import matplotlib as plt\n",
     "from scipy.stats import norm"
    ]
   },
