Added all plots and some analysis. Next: Add computation time to the dataframe. Add more optimizations.

--- a/optimization_analysis.ipynb
+++ b/optimization_analysis.ipynb
@@ -40,7 +40,7 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib as plt\n",
+    "import matplotlib.pyplot as plt\n",
     "from scipy.stats import norm"
    ]
   },
@@ -189,14 +189,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.1: Error Between Bases"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### 2.1.1: Calls"
+    "### 2.1: Data Organization\n",
+    "\n",
+    "This could be more space/memory efficient; too many copies made for the sake of being explicit."
    ]
   },
   {
@@ -204,13 +199,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "power_calls, power_puts = option_prices.loc[(option_prices[\"Basis\"] == 0) & (option_prices[\"Call Flag\"] == 1)], option_prices.loc[(option_prices[\"Basis\"] == 0) & (option_prices[\"Call Flag\"] == 0)]\n",
+    "hermitian_calls, hermitian_puts = option_prices.loc[(option_prices[\"Basis\"] == 1) & (option_prices[\"Call Flag\"] == 1)], option_prices.loc[(option_prices[\"Basis\"] == 1) & (option_prices[\"Call Flag\"] == 0)]\n",
+    "laguerre_calls, laguerre_puts = option_prices.loc[(option_prices[\"Basis\"] == 2) & (option_prices[\"Call Flag\"] == 1)], option_prices.loc[(option_prices[\"Basis\"] == 2) & (option_prices[\"Call Flag\"] == 0)]"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 2.1.2: Puts"
+    "#### 2.2: Error vs Risk-Free Rates\n",
+    "\n",
+    "Setting $\\sigma = 0.3$ and $T = 1$. Feel free to change these values to draw your own conclusions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 2.2.1: Calls\n",
+    "\n",
+    "Setting $K = 110$."
    ]
   },
   {
@@ -218,55 +228,35 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "#### 2.2: Error vs Risk-Free Rates"
+    "vol_temp = 0.3\n",
+    "expiry_temp = 1\n",
+    "strike_temp = 110\n",
+    "\n",
+    "filtered_power_calls = power_calls.loc[(power_calls[\"Volatility\"] == vol_temp) & (power_calls[\"Expiry Time\"] == expiry_temp) & (power_calls[\"Strike Price\"] == strike_temp)]\n",
+    "filtered_hermitian_calls = hermitian_calls.loc[(hermitian_calls[\"Volatility\"] == vol_temp) & (hermitian_calls[\"Expiry Time\"] == expiry_temp) & (hermitian_calls[\"Strike Price\"] == strike_temp)]\n",
+    "filtered_laguerre_calls = laguerre_calls.loc[(laguerre_calls[\"Volatility\"] == vol_temp) & (laguerre_calls[\"Expiry Time\"] == expiry_temp) & (laguerre_calls[\"Strike Price\"] == strike_temp)]\n",
+    "\n",
+    "plt.plot(filtered_power_calls[\"Risk-Free Rate\"], filtered_power_calls[\"Original Error\"], color = 'blue', label = 'Original')\n",
+    "plt.plot(filtered_power_calls[\"Risk-Free Rate\"], filtered_power_calls[\"Optimized Error\"], color = 'red', label = 'Power Optimized')\n",
+    "plt.plot(filtered_hermitian_calls[\"Risk-Free Rate\"], filtered_hermitian_calls[\"Optimized Error\"], color = 'orange', label = 'Hermitian Optimized')\n",
+    "plt.plot(filtered_laguerre_calls[\"Risk-Free Rate\"], filtered_laguerre_calls[\"Optimized Error\"], color = 'green', label = 'Laguerre Optimized')\n",
+    "\n",
+    "plt.title('A Plot of Risk-Free Rate vs L^2 Error for Calls')\n",
+    "plt.xlabel(\"Risk-Free Rate\")\n",
+    "plt.ylabel(\"Normalized L^2 Error\")\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 2.2.1: Calls"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### 2.2.1: Puts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 2.3: Error vs Volatility"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### 2.3.1: Calls"
+    "##### 2.2.2: Puts\n",
+    "\n",
+    "Setting $K = 90$."
    ]
   },
   {
@@ -274,13 +264,42 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "strike_temp = 90\n",
+    "\n",
+    "filtered_power_puts = power_puts.loc[(power_puts[\"Volatility\"] == vol_temp) & (power_puts[\"Expiry Time\"] == expiry_temp) & (power_puts[\"Strike Price\"] == strike_temp)]\n",
+    "filtered_hermitian_puts = hermitian_puts.loc[(hermitian_puts[\"Volatility\"] == vol_temp) & (hermitian_puts[\"Expiry Time\"] == expiry_temp) & (hermitian_puts[\"Strike Price\"] == strike_temp)]\n",
+    "filtered_laguerre_puts = laguerre_puts.loc[(laguerre_puts[\"Volatility\"] == vol_temp) & (laguerre_puts[\"Expiry Time\"] == expiry_temp) & (laguerre_puts[\"Strike Price\"] == strike_temp)]\n",
+    "\n",
+    "plt.plot(filtered_power_puts[\"Risk-Free Rate\"], filtered_power_puts[\"Original Error\"], color = 'blue', label = 'Original')\n",
+    "plt.plot(filtered_power_puts[\"Risk-Free Rate\"], filtered_power_puts[\"Optimized Error\"], color = 'red', label = 'Power Optimized')\n",
+    "plt.plot(filtered_hermitian_puts[\"Risk-Free Rate\"], filtered_hermitian_puts[\"Optimized Error\"], color = 'orange', label = 'Hermitian Optimized')\n",
+    "plt.plot(filtered_laguerre_puts[\"Risk-Free Rate\"], filtered_laguerre_puts[\"Optimized Error\"], color = 'green', label = 'Laguerre Optimized')\n",
+    "\n",
+    "plt.title('A Plot of Risk-Free Rate vs L^2 Error for Puts')\n",
+    "plt.xlabel(\"Risk-Free Rate\")\n",
+    "plt.ylabel(\"Normalized L^2 Error\")\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 2.3.1: Puts"
+    "#### 2.3: Error vs Volatility\n",
+    "\n",
+    "Setting $r = 0.05$ and $T = 1$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 2.3.1: Calls\n",
+    "\n",
+    "Setting $K = 110$."
    ]
   },
   {
@@ -288,13 +307,69 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "risk_temp = 0.05\n",
+    "strike_temp = 110\n",
+    "expiry_temp = 1\n",
+    "\n",
+    "filtered_power_calls = power_calls.loc[(power_calls[\"Risk-Free Rate\"] == risk_temp) & (power_calls[\"Expiry Time\"] == expiry_temp) & (power_calls[\"Strike Price\"] == strike_temp)]\n",
+    "filtered_hermitian_calls = hermitian_calls.loc[(hermitian_calls[\"Risk-Free Rate\"] == risk_temp) & (hermitian_calls[\"Expiry Time\"] == expiry_temp) & (hermitian_calls[\"Strike Price\"] == strike_temp)]\n",
+    "filtered_laguerre_calls = laguerre_calls.loc[(laguerre_calls[\"Risk-Free Rate\"] == risk_temp) & (laguerre_calls[\"Expiry Time\"] == expiry_temp) & (laguerre_calls[\"Strike Price\"] == strike_temp)]\n",
+    "\n",
+    "plt.plot(filtered_power_calls[\"Volatility\"], filtered_power_calls[\"Original Error\"], color = 'blue', label = 'Original')\n",
+    "plt.plot(filtered_power_calls[\"Volatility\"], filtered_power_calls[\"Optimized Error\"], color = 'red', label = 'Power Optimized')\n",
+    "plt.plot(filtered_hermitian_calls[\"Volatility\"], filtered_hermitian_calls[\"Optimized Error\"], color = 'orange', label = 'Hermitian Optimized')\n",
+    "plt.plot(filtered_laguerre_calls[\"Volatility\"], filtered_laguerre_calls[\"Optimized Error\"], color = 'green', label = 'Laguerre Optimized')\n",
+    "\n",
+    "plt.title('A Plot of Volatility vs L^2 Error for Calls')\n",
+    "plt.xlabel(\"Volatility\")\n",
+    "plt.ylabel(\"Normalized L^2 Error\")\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.4: Error vs Strike Price"
+    "##### 2.3.2: Puts\n",
+    "\n",
+    "Setting $K = 90$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strike_temp = 90\n",
+    "\n",
+    "filtered_power_puts = power_puts.loc[(power_puts[\"Risk-Free Rate\"] == risk_temp) & (power_puts[\"Expiry Time\"] == expiry_temp) & (power_puts[\"Strike Price\"] == strike_temp)]\n",
+    "filtered_hermitian_puts = hermitian_puts.loc[(hermitian_puts[\"Risk-Free Rate\"] == risk_temp) & (hermitian_puts[\"Expiry Time\"] == expiry_temp) & (hermitian_puts[\"Strike Price\"] == strike_temp)]\n",
+    "filtered_laguerre_puts = laguerre_puts.loc[(laguerre_puts[\"Risk-Free Rate\"] == risk_temp) & (laguerre_puts[\"Expiry Time\"] == expiry_temp) & (laguerre_puts[\"Strike Price\"] == strike_temp)]\n",
+    "\n",
+    "plt.plot(filtered_power_puts[\"Volatility\"], filtered_power_puts[\"Original Error\"], color = 'blue', label = 'Original')\n",
+    "plt.plot(filtered_power_puts[\"Volatility\"], filtered_power_puts[\"Optimized Error\"], color = 'red', label = 'Power Optimized')\n",
+    "plt.plot(filtered_hermitian_puts[\"Volatility\"], filtered_hermitian_puts[\"Optimized Error\"], color = 'orange', label = 'Hermitian Optimized')\n",
+    "plt.plot(filtered_laguerre_puts[\"Volatility\"], filtered_laguerre_puts[\"Optimized Error\"], color = 'green', label = 'Laguerre Optimized')\n",
+    "\n",
+    "plt.title('A Plot of Volatility vs L^2 Error for Puts')\n",
+    "plt.xlabel(\"Volatility\")\n",
+    "plt.ylabel(\"Normalized L^2 Error\")\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.4: Error vs Strike Price\n",
+    "\n",
+    "Setting $r = 0.05$, $T = 1$ and $\\sigma = 0.3$."
    ]
   },
   {
@@ -309,13 +384,33 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "risk_temp = 0.05\n",
+    "expiry_temp = 1\n",
+    "vol_temp = 0.3\n",
+    "\n",
+    "filtered_power_calls = power_calls.loc[(power_calls[\"Risk-Free Rate\"] == risk_temp) & (power_calls[\"Expiry Time\"] == expiry_temp) & (power_calls[\"Volatility\"] == vol_temp)]\n",
+    "filtered_hermitian_calls = hermitian_calls.loc[(hermitian_calls[\"Risk-Free Rate\"] == risk_temp) & (hermitian_calls[\"Expiry Time\"] == expiry_temp) & (hermitian_calls[\"Volatility\"] == vol_temp)]\n",
+    "filtered_laguerre_calls = laguerre_calls.loc[(laguerre_calls[\"Risk-Free Rate\"] == risk_temp) & (laguerre_calls[\"Expiry Time\"] == expiry_temp) & (laguerre_calls[\"Volatility\"] == vol_temp)]\n",
+    "\n",
+    "plt.plot(filtered_power_calls[\"Strike Price\"], filtered_power_calls[\"Original Error\"], color = 'blue', label = 'Original')\n",
+    "plt.plot(filtered_power_calls[\"Strike Price\"], filtered_power_calls[\"Optimized Error\"], color = 'red', label = 'Power Optimized')\n",
+    "plt.plot(filtered_hermitian_calls[\"Strike Price\"], filtered_hermitian_calls[\"Optimized Error\"], color = 'orange', label = 'Hermitian Optimized')\n",
+    "plt.plot(filtered_laguerre_calls[\"Strike Price\"], filtered_laguerre_calls[\"Optimized Error\"], color = 'green', label = 'Laguerre Optimized')\n",
+    "\n",
+    "plt.title('A Plot of Strike Price vs L^2 Error for Calls')\n",
+    "plt.xlabel(\"Strike Price\")\n",
+    "plt.ylabel(\"Normalized L^2 Error\")\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 2.4.1: Puts"
+    "##### 2.4.2: Puts"
    ]
   },
   {
@@ -323,20 +418,40 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "#### 2.5: Error vs Expiry Time"
+    "filtered_power_puts = power_puts.loc[(power_puts[\"Risk-Free Rate\"] == risk_temp) & (power_puts[\"Expiry Time\"] == expiry_temp) & (power_puts[\"Volatility\"] == vol_temp)]\n",
+    "filtered_hermitian_puts = hermitian_puts.loc[(hermitian_puts[\"Risk-Free Rate\"] == risk_temp) & (hermitian_puts[\"Expiry Time\"] == expiry_temp) & (hermitian_puts[\"Volatility\"] == vol_temp)]\n",
+    "filtered_laguerre_puts = laguerre_puts.loc[(laguerre_puts[\"Risk-Free Rate\"] == risk_temp) & (laguerre_puts[\"Expiry Time\"] == expiry_temp) & (laguerre_puts[\"Volatility\"] == vol_temp)]\n",
+    "\n",
+    "plt.plot(filtered_power_puts[\"Strike Price\"], filtered_power_puts[\"Original Error\"], color = 'blue', label = 'Original')\n",
+    "plt.plot(filtered_power_puts[\"Strike Price\"], filtered_power_puts[\"Optimized Error\"], color = 'red', label = 'Power Optimized')\n",
+    "plt.plot(filtered_hermitian_puts[\"Strike Price\"], filtered_hermitian_puts[\"Optimized Error\"], color = 'orange', label = 'Hermitian Optimized')\n",
+    "plt.plot(filtered_laguerre_puts[\"Strike Price\"], filtered_laguerre_puts[\"Optimized Error\"], color = 'green', label = 'Laguerre Optimized')\n",
+    "\n",
+    "plt.title('A Plot of Strike Price vs L^2 Error for Puts')\n",
+    "plt.xlabel(\"Strike Price\")\n",
+    "plt.ylabel(\"Normalized L^2 Error\")\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 2.5.1: Calls"
+    "#### 2.5: Error vs Expiry Time\n",
+    "\n",
+    "Setting $r = 0.05$ and $\\sigma = 0.3$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 2.5.1: Calls\n",
+    "\n",
+    "$K = 110$."
    ]
   },
   {
@@ -344,13 +459,35 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "risk_temp = 0.05\n",
+    "strike_temp = 110\n",
+    "vol_temp = 0.3\n",
+    "\n",
+    "filtered_power_calls = power_calls.loc[(power_calls[\"Risk-Free Rate\"] == risk_temp) & (power_calls[\"Strike Price\"] == strike_temp) & (power_calls[\"Volatility\"] == vol_temp)]\n",
+    "filtered_hermitian_calls = hermitian_calls.loc[(hermitian_calls[\"Risk-Free Rate\"] == risk_temp) & (hermitian_calls[\"Strike Price\"] == strike_temp) & (hermitian_calls[\"Volatility\"] == vol_temp)]\n",
+    "filtered_laguerre_calls = laguerre_calls.loc[(laguerre_calls[\"Risk-Free Rate\"] == risk_temp) & (laguerre_calls[\"Strike Price\"] == strike_temp) & (laguerre_calls[\"Volatility\"] == vol_temp)]\n",
+    "\n",
+    "plt.plot(filtered_power_calls[\"Expiry Time\"], filtered_power_calls[\"Original Error\"], color = 'blue', label = 'Original')\n",
+    "plt.plot(filtered_power_calls[\"Expiry Time\"], filtered_power_calls[\"Optimized Error\"], color = 'red', label = 'Power Optimized')\n",
+    "plt.plot(filtered_hermitian_calls[\"Expiry Time\"], filtered_hermitian_calls[\"Optimized Error\"], color = 'orange', label = 'Hermitian Optimized')\n",
+    "plt.plot(filtered_laguerre_calls[\"Expiry Time\"], filtered_laguerre_calls[\"Optimized Error\"], color = 'green', label = 'Laguerre Optimized')\n",
+    "\n",
+    "plt.title('A Plot of Expiry Time vs L^2 Error for Calls')\n",
+    "plt.xlabel(\"Expiry Time\")\n",
+    "plt.ylabel(\"Normalized L^2 Error\")\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 2.5.1: Puts"
+    "##### 2.5.2: Puts\n",
+    "\n",
+    "$K = 90$."
    ]
   },
   {
@@ -358,7 +495,36 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "strike_temp = 90\n",
+    "\n",
+    "filtered_power_puts = power_puts.loc[(power_puts[\"Risk-Free Rate\"] == risk_temp) & (power_puts[\"Strike Price\"] == strike_temp) & (power_puts[\"Volatility\"] == vol_temp)]\n",
+    "filtered_hermitian_puts = hermitian_puts.loc[(hermitian_puts[\"Risk-Free Rate\"] == risk_temp) & (hermitian_puts[\"Strike Price\"] == strike_temp) & (hermitian_puts[\"Volatility\"] == vol_temp)]\n",
+    "filtered_laguerre_puts = laguerre_puts.loc[(laguerre_puts[\"Risk-Free Rate\"] == risk_temp) & (laguerre_puts[\"Strike Price\"] == strike_temp) & (laguerre_puts[\"Volatility\"] == vol_temp)]\n",
+    "\n",
+    "plt.plot(filtered_power_puts[\"Expiry Time\"], filtered_power_puts[\"Original Error\"], color = 'blue', label = 'Original')\n",
+    "plt.plot(filtered_power_puts[\"Expiry Time\"], filtered_power_puts[\"Optimized Error\"], color = 'red', label = 'Power Optimized')\n",
+    "plt.plot(filtered_hermitian_puts[\"Expiry Time\"], filtered_hermitian_puts[\"Optimized Error\"], color = 'orange', label = 'Hermitian Optimized')\n",
+    "plt.plot(filtered_laguerre_puts[\"Expiry Time\"], filtered_laguerre_puts[\"Optimized Error\"], color = 'green', label = 'Laguerre Optimized')\n",
+    "\n",
+    "plt.title('A Plot of Expiry Time vs L^2 Error for Puts')\n",
+    "plt.xlabel(\"Expiry Time\")\n",
+    "plt.ylabel(\"Normalized L^2 Error\")\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3: Summary\n",
+    "\n",
+    "The optimizations made the method more accurate. The power basis usually performs about the same as the Hermitian and Laguerre basis that should (hypothetically) perform better. Thus, using more complex bases is not incredibly valuable unless it decreases computation time. Will add this before the methods are run again.\n",
+    "\n",
+    "Typically, the higher the volatility, further the stock out-of-the-money, lower risk-free rate, and higher expiry time imply a greater difference between the original and optimized error (the original is *almost* always greater)."
+   ]
   }
  ],
  "metadata": {
