Finished plot analysis and summary. Next: Add plots to README and finish description.

--- a/optimization_analysis.ipynb
+++ b/optimization_analysis.ipynb
@@ -4,18 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Optimization Data Analysis\n",
-    "\n",
-    "### Tasks:\n",
-    "1. ~~Generate empirical price and add as column~~\n",
-    "2. ~~Calculate relative normalized 2-norm for each data and add as column~~\n",
-    "3. Plots\n",
-    "    - expiry\n",
-    "    - risk-free rate\n",
-    "    - volatility\n",
-    "    - strike price\n",
-    "    - bases\n",
-    "    - call v put"
+    "# Optimization Data Analysis"
    ]
   },
   {
@@ -182,7 +171,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2: Plots"
+    "## 2: Plots\n",
+    "\n",
+    "I'm aware that I should have made a plotting function; it would have made this less of an eyesore. There are enough inputs to where it is simpler and faster to copy & paste the previous code and change one parameter than write a function for it. This is not generalizable, but it does not have to be.\n",
+    "\n",
+    "I will omit analysis below each plot and summarize it in the final section for brevity purposes."
    ]
   },
   {
@@ -410,7 +403,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 2.4.2: Puts"
+    "##### 2.4.2: Puts\n",
+    "\n",
+    "This must be a systematic issue since normalized error is very high for both methds/all bases."
    ]
   },
   {
@@ -519,11 +514,327 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 2.6: Computation Time vs Risk-Free Rate\n",
+    "\n",
+    "Setting $\\sigma = 0.3$ and $T = 1$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.6.1: Calls\n",
+    "\n",
+    "$K = 110$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strike_temp = 110\n",
+    "vol_temp = 0.3\n",
+    "expiry_temp = 1\n",
+    "\n",
+    "filtered_power_calls = power_calls.loc[(power_calls[\"Strike Price\"] == strike_temp) & (power_calls[\"Volatility\"] == vol_temp) & (power_calls[\"Expiry Time\"] == expiry_temp)]\n",
+    "filtered_hermitian_calls = hermitian_calls.loc[(hermitian_calls[\"Strike Price\"] == strike_temp) & (hermitian_calls[\"Volatility\"] == vol_temp) & (hermitian_calls[\"Expiry Time\"] == expiry_temp)]\n",
+    "filtered_laguerre_calls = laguerre_calls.loc[(laguerre_calls[\"Strike Price\"] == strike_temp) & (laguerre_calls[\"Volatility\"] == vol_temp) & (laguerre_calls[\"Expiry Time\"] == expiry_temp)]\n",
+    "\n",
+    "# Divide optimized computation time by 3 since parallelization\n",
+    "plt.plot(filtered_power_calls[\"Risk-Free Rate\"], filtered_power_calls[\"Original Computation Time\"], color = 'blue', label = 'Original')\n",
+    "plt.plot(filtered_power_calls[\"Risk-Free Rate\"], filtered_power_calls[\"Optimized Computation Time\"] / 3, color = 'red', label = 'Power Optimized')\n",
+    "plt.plot(filtered_hermitian_calls[\"Risk-Free Rate\"], filtered_hermitian_calls[\"Optimized Computation Time\"] / 3, color = 'orange', label = 'Hermitian Optimized')\n",
+    "plt.plot(filtered_laguerre_calls[\"Risk-Free Rate\"], filtered_laguerre_calls[\"Optimized Computation Time\"] / 3, color = 'green', label = 'Laguerre Optimized')\n",
+    "\n",
+    "plt.title('A Plot of Risk-Free Rate vs Computation Time for Calls')\n",
+    "plt.xlabel(\"Risk-Free Rate\")\n",
+    "plt.ylabel(\"Computation Time (seconds)\")\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.6.2: Puts\n",
+    "\n",
+    "$K = 90$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strike_temp = 90\n",
+    "\n",
+    "filtered_power_puts = power_puts.loc[(power_puts[\"Strike Price\"] == strike_temp) & (power_puts[\"Volatility\"] == vol_temp) & (power_puts[\"Expiry Time\"] == expiry_temp)]\n",
+    "filtered_hermitian_puts = hermitian_puts.loc[(hermitian_puts[\"Strike Price\"] == strike_temp) & (hermitian_puts[\"Volatility\"] == vol_temp) & (hermitian_puts[\"Expiry Time\"] == expiry_temp)]\n",
+    "filtered_laguerre_puts = laguerre_puts.loc[(laguerre_puts[\"Strike Price\"] == strike_temp) & (laguerre_puts[\"Volatility\"] == vol_temp) & (laguerre_puts[\"Expiry Time\"] == expiry_temp)]\n",
+    "\n",
+    "# Divide optimized computation time by 3 since parallelization\n",
+    "plt.plot(filtered_power_puts[\"Risk-Free Rate\"], filtered_power_puts[\"Original Computation Time\"], color = 'blue', label = 'Original')\n",
+    "plt.plot(filtered_power_puts[\"Risk-Free Rate\"], filtered_power_puts[\"Optimized Computation Time\"] / 3, color = 'red', label = 'Power Optimized')\n",
+    "plt.plot(filtered_hermitian_puts[\"Risk-Free Rate\"], filtered_hermitian_puts[\"Optimized Computation Time\"] / 3, color = 'orange', label = 'Hermitian Optimized')\n",
+    "plt.plot(filtered_laguerre_puts[\"Risk-Free Rate\"], filtered_laguerre_puts[\"Optimized Computation Time\"] / 3, color = 'green', label = 'Laguerre Optimized')\n",
+    "\n",
+    "plt.title('A Plot of Risk-Free Rate vs Computation Time for Puts')\n",
+    "plt.xlabel(\"Risk-Free Rate\")\n",
+    "plt.ylabel(\"Computation Time (seconds)\")\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.7: Computation Time vs Volatility\n",
+    "\n",
+    "Setting $r = 0.05$ and $T = 1$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.7.1: Calls\n",
+    "\n",
+    "$K = 110$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strike_temp = 110\n",
+    "\n",
+    "filtered_power_calls = power_calls.loc[(power_calls[\"Strike Price\"] == strike_temp) & (power_calls[\"Risk-Free Rate\"] == risk_temp) & (power_calls[\"Expiry Time\"] == expiry_temp)]\n",
+    "filtered_hermitian_calls = hermitian_calls.loc[(hermitian_calls[\"Strike Price\"] == strike_temp) & (hermitian_calls[\"Risk-Free Rate\"] == risk_temp) & (hermitian_calls[\"Expiry Time\"] == expiry_temp)]\n",
+    "filtered_laguerre_calls = laguerre_calls.loc[(laguerre_calls[\"Strike Price\"] == strike_temp) & (laguerre_calls[\"Risk-Free Rate\"] == risk_temp) & (laguerre_calls[\"Expiry Time\"] == expiry_temp)]\n",
+    "\n",
+    "# Divide optimized computation time by 3 since parallelization\n",
+    "plt.plot(filtered_power_calls[\"Volatility\"], filtered_power_calls[\"Original Computation Time\"], color = 'blue', label = 'Original')\n",
+    "plt.plot(filtered_power_calls[\"Volatility\"], filtered_power_calls[\"Optimized Computation Time\"] / 3, color = 'red', label = 'Power Optimized')\n",
+    "plt.plot(filtered_hermitian_calls[\"Volatility\"], filtered_hermitian_calls[\"Optimized Computation Time\"] / 3, color = 'orange', label = 'Hermitian Optimized')\n",
+    "plt.plot(filtered_laguerre_calls[\"Volatility\"], filtered_laguerre_calls[\"Optimized Computation Time\"] / 3, color = 'green', label = 'Laguerre Optimized')\n",
+    "\n",
+    "plt.title('A Plot of Volatility vs Computation Time for Calls')\n",
+    "plt.xlabel(\"Volatility\")\n",
+    "plt.ylabel(\"Computation Time (seconds)\")\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.7.2: Puts\n",
+    "\n",
+    "$K = 90$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strike_temp = 90\n",
+    "\n",
+    "filtered_power_puts = power_puts.loc[(power_puts[\"Strike Price\"] == strike_temp) & (power_puts[\"Risk-Free Rate\"] == risk_temp) & (power_puts[\"Expiry Time\"] == expiry_temp)]\n",
+    "filtered_hermitian_puts = hermitian_puts.loc[(hermitian_puts[\"Strike Price\"] == strike_temp) & (hermitian_puts[\"Risk-Free Rate\"] == risk_temp) & (hermitian_puts[\"Expiry Time\"] == expiry_temp)]\n",
+    "filtered_laguerre_puts = laguerre_puts.loc[(laguerre_puts[\"Strike Price\"] == strike_temp) & (laguerre_puts[\"Risk-Free Rate\"] == risk_temp) & (laguerre_puts[\"Expiry Time\"] == expiry_temp)]\n",
+    "\n",
+    "# Divide optimized computation time by 3 since parallelization\n",
+    "plt.plot(filtered_power_puts[\"Volatility\"], filtered_power_puts[\"Original Computation Time\"], color = 'blue', label = 'Original')\n",
+    "plt.plot(filtered_power_puts[\"Volatility\"], filtered_power_puts[\"Optimized Computation Time\"] / 3, color = 'red', label = 'Power Optimized')\n",
+    "plt.plot(filtered_hermitian_puts[\"Volatility\"], filtered_hermitian_puts[\"Optimized Computation Time\"] / 3, color = 'orange', label = 'Hermitian Optimized')\n",
+    "plt.plot(filtered_laguerre_puts[\"Volatility\"], filtered_laguerre_puts[\"Optimized Computation Time\"] / 3, color = 'green', label = 'Laguerre Optimized')\n",
+    "\n",
+    "plt.title('A Plot of Volatility vs Computation Time for Calls')\n",
+    "plt.xlabel(\"Volatility\")\n",
+    "plt.ylabel(\"Computation Time (seconds)\")\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.8: Computation Time vs Strike Price\n",
+    "\n",
+    "Setting $r = 0.05, \\sigma = 0.3,$ and $T = 1$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.8.1: Calls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filtered_power_calls = power_calls.loc[(power_calls[\"Volatility\"] == vol_temp) & (power_calls[\"Risk-Free Rate\"] == risk_temp) & (power_calls[\"Expiry Time\"] == expiry_temp)]\n",
+    "filtered_hermitian_calls = hermitian_calls.loc[(hermitian_calls[\"Volatility\"] == vol_temp) & (hermitian_calls[\"Risk-Free Rate\"] == risk_temp) & (hermitian_calls[\"Expiry Time\"] == expiry_temp)]\n",
+    "filtered_laguerre_calls = laguerre_calls.loc[(laguerre_calls[\"Volatility\"] == vol_temp) & (laguerre_calls[\"Risk-Free Rate\"] == risk_temp) & (laguerre_calls[\"Expiry Time\"] == expiry_temp)]\n",
+    "\n",
+    "# Divide optimized computation time by 3 since parallelization\n",
+    "plt.plot(filtered_power_calls[\"Strike Price\"], filtered_power_calls[\"Original Computation Time\"], color = 'blue', label = 'Original')\n",
+    "plt.plot(filtered_power_calls[\"Strike Price\"], filtered_power_calls[\"Optimized Computation Time\"] / 3, color = 'red', label = 'Power Optimized')\n",
+    "plt.plot(filtered_hermitian_calls[\"Strike Price\"], filtered_hermitian_calls[\"Optimized Computation Time\"] / 3, color = 'orange', label = 'Hermitian Optimized')\n",
+    "plt.plot(filtered_laguerre_calls[\"Strike Price\"], filtered_laguerre_calls[\"Optimized Computation Time\"] / 3, color = 'green', label = 'Laguerre Optimized')\n",
+    "\n",
+    "plt.title('A Plot of Strike Price vs Computation Time for Calls')\n",
+    "plt.xlabel(\"Strike Price\")\n",
+    "plt.ylabel(\"Computation Time (seconds)\")\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.8.2: Puts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filtered_power_puts = power_puts.loc[(power_puts[\"Volatility\"] == vol_temp) & (power_puts[\"Risk-Free Rate\"] == risk_temp) & (power_puts[\"Expiry Time\"] == expiry_temp)]\n",
+    "filtered_hermitian_puts = hermitian_puts.loc[(hermitian_puts[\"Volatility\"] == vol_temp) & (hermitian_puts[\"Risk-Free Rate\"] == risk_temp) & (hermitian_puts[\"Expiry Time\"] == expiry_temp)]\n",
+    "filtered_laguerre_puts = laguerre_puts.loc[(laguerre_puts[\"Volatility\"] == vol_temp) & (laguerre_puts[\"Risk-Free Rate\"] == risk_temp) & (laguerre_puts[\"Expiry Time\"] == expiry_temp)]\n",
+    "\n",
+    "# Divide optimized computation time by 3 since parallelization\n",
+    "plt.plot(filtered_power_puts[\"Strike Price\"], filtered_power_puts[\"Original Computation Time\"], color = 'blue', label = 'Original')\n",
+    "plt.plot(filtered_power_puts[\"Strike Price\"], filtered_power_puts[\"Optimized Computation Time\"] / 3, color = 'red', label = 'Power Optimized')\n",
+    "plt.plot(filtered_hermitian_puts[\"Strike Price\"], filtered_hermitian_puts[\"Optimized Computation Time\"] / 3, color = 'orange', label = 'Hermitian Optimized')\n",
+    "plt.plot(filtered_laguerre_puts[\"Strike Price\"], filtered_laguerre_puts[\"Optimized Computation Time\"] / 3, color = 'green', label = 'Laguerre Optimized')\n",
+    "\n",
+    "plt.title('A Plot of Strike Price vs Computation Time for Puts')\n",
+    "plt.xlabel(\"Strike Price\")\n",
+    "plt.ylabel(\"Computation Time (seconds)\")\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.8: Computation Time vs Expiry Time   \n",
+    "\n",
+    "Setting $r = 0.05$ and $\\sigma = 0.3$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.8.1: Calls\n",
+    "\n",
+    "$K = 110$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strike_temp = 110\n",
+    "\n",
+    "filtered_power_calls = power_calls.loc[(power_calls[\"Volatility\"] == vol_temp) & (power_calls[\"Risk-Free Rate\"] == risk_temp) & (power_calls[\"Strike Price\"] == strike_temp)]\n",
+    "filtered_hermitian_calls = hermitian_calls.loc[(hermitian_calls[\"Volatility\"] == vol_temp) & (hermitian_calls[\"Risk-Free Rate\"] == risk_temp) & (hermitian_calls[\"Strike Price\"] == strike_temp)]\n",
+    "filtered_laguerre_calls = laguerre_calls.loc[(laguerre_calls[\"Volatility\"] == vol_temp) & (laguerre_calls[\"Risk-Free Rate\"] == risk_temp) & (laguerre_calls[\"Strike Price\"] == strike_temp)]\n",
+    "\n",
+    "# Divide optimized computation time by 3 since parallelization\n",
+    "plt.plot(filtered_power_calls[\"Expiry Time\"], filtered_power_calls[\"Original Computation Time\"], color = 'blue', label = 'Original')\n",
+    "plt.plot(filtered_power_calls[\"Expiry Time\"], filtered_power_calls[\"Optimized Computation Time\"] / 3, color = 'red', label = 'Power Optimized')\n",
+    "plt.plot(filtered_hermitian_calls[\"Expiry Time\"], filtered_hermitian_calls[\"Optimized Computation Time\"] / 3, color = 'orange', label = 'Hermitian Optimized')\n",
+    "plt.plot(filtered_laguerre_calls[\"Expiry Time\"], filtered_laguerre_calls[\"Optimized Computation Time\"] / 3, color = 'green', label = 'Laguerre Optimized')\n",
+    "\n",
+    "plt.title('A Plot of Expiry Time vs Computation Time for Calls')\n",
+    "plt.xlabel(\"Expiry Time\")\n",
+    "plt.ylabel(\"Computation Time (seconds)\")\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.8.2: Puts\n",
+    "\n",
+    "$K = 90$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strike_temp = 90\n",
+    "\n",
+    "filtered_power_puts = power_puts.loc[(power_puts[\"Volatility\"] == vol_temp) & (power_puts[\"Risk-Free Rate\"] == risk_temp) & (power_puts[\"Strike Price\"] == strike_temp)]\n",
+    "filtered_hermitian_puts = hermitian_puts.loc[(hermitian_puts[\"Volatility\"] == vol_temp) & (hermitian_puts[\"Risk-Free Rate\"] == risk_temp) & (hermitian_puts[\"Strike Price\"] == strike_temp)]\n",
+    "filtered_laguerre_puts = laguerre_puts.loc[(laguerre_puts[\"Volatility\"] == vol_temp) & (laguerre_puts[\"Risk-Free Rate\"] == risk_temp) & (laguerre_puts[\"Strike Price\"] == strike_temp)]\n",
+    "\n",
+    "# Divide optimized computation time by 3 since parallelization\n",
+    "plt.plot(filtered_power_puts[\"Expiry Time\"], filtered_power_puts[\"Original Computation Time\"], color = 'blue', label = 'Original')\n",
+    "plt.plot(filtered_power_puts[\"Expiry Time\"], filtered_power_puts[\"Optimized Computation Time\"] / 3, color = 'red', label = 'Power Optimized')\n",
+    "plt.plot(filtered_hermitian_puts[\"Expiry Time\"], filtered_hermitian_puts[\"Optimized Computation Time\"] / 3, color = 'orange', label = 'Hermitian Optimized')\n",
+    "plt.plot(filtered_laguerre_puts[\"Expiry Time\"], filtered_laguerre_puts[\"Optimized Computation Time\"] / 3, color = 'green', label = 'Laguerre Optimized')\n",
+    "\n",
+    "plt.title('A Plot of Expiry Time vs Computation Time for Calls')\n",
+    "plt.xlabel(\"Expiry Time\")\n",
+    "plt.ylabel(\"Computation Time (seconds)\")\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 3: Summary\n",
     "\n",
-    "The optimizations made the method more accurate. The power basis usually performs about the same as the Hermitian and Laguerre basis that should (hypothetically) perform better. Thus, using more complex bases is not incredibly valuable unless it decreases computation time. Will add this before the methods are run again.\n",
+    "The optimizations made the method more accurate and faster. The Power basis usually performs about the same as the Hermitian and Laguerre basis that should (hypothetically) perform better due to the increased complexity. Thus, using more complex bases is not incredibly valuable since is does not signficantly decrease computation time when compared to the Power basis.\n",
     "\n",
-    "Typically, the higher the volatility, further the stock out-of-the-money, lower risk-free rate, and higher expiry time imply a greater difference between the original and optimized error (the original is *almost* always greater)."
+    "Typically, the higher the volatility, further the stock out-of-the-money, lower risk-free rate, and higher expiry time imply a greater difference between the original and optimized error (the original is *almost* always greater). I drew this conclusion by observing each of the plots and changing the standard input values to cross-confirm the results via the other plots (mentally constructing a 3D plot between three variables to make sure the results align). One may check themselves in a similar manner or generate 3D plots.\n",
+    "\n",
+    "There seems to be a significantly greater amount of error across all cases for put options than for calls. I am certain the error for the original method is correct, meaning there must a methodology error when computing the put prices. This stems from how the path conditions are formulated.\n",
+    "\n",
+    "The Laguerre basis performed relatively poorly for expiry times greater than $1$ and strike prices far out-of-the-money for puts. Further literature review must be completed to fully understand this and whether this result agrees with other implementations.\n",
+    "\n",
+    "In short, use the optimized method with the Power basis since it is about as fast and provides similar accuracy to the more complex Laguerre and Hermitian bases."
    ]
   }
  ],
